# Streamo

./: .gitignore  README.md  README_jp.md  inference.py  pyproject.toml  train.sh
examples/infer/: streaming_action_caption_demo.py
requirements/: framework.txt
scripts/: build_stream_archive_index.py  prepare_streamo_training_data.py
swift/llm/dataset/dataset/: __init__.py  streaming_video_dataset.py
swift/llm/dataset/preprocessor/: __init__.py  streaming_video.py
swift/llm/infer/infer_engine/: vllm_engine.py
swift/plugin/: streaming_dataset.py  streaming_dataset_config.py
swift/trainers/rlhf_trainer/: utils.py
tests/general/: test_prepare_streamo_training_data.py  test_streaming_action_caption_demo.py  test_streaming_video_archive.py
